syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
package google.protobuf;

service Process{
	rpc NewIntervalProcess(IntervalRequest) returns(google.protobuf.Empty);//response token
	rpc NewProcess(ProcessRequest) returns(google.protobuf.Empty);
	rpc StartYoutube(YoutubeRequest) returns(google.protobuf.Empty);
	rpc GetProcesses(google.protobuf.Empty) returns(ProcessesResponse);
	rpc ShutdownWindows(ShutdownWindowsRequest) returns(google.protobuf.Empty);
	rpc ShutdownProcess(ShutdownRequest) returns(ShutdownResponse);
}

message IntervalRequest{
	string process_name = 1;
	int32 count = 2;
	int32 count_per_interval = 3;
	int32 interval_in_seconds = 4;
	StringValue arguments = 5;
	Int32Value volume = 6;
	Int32Value delay = 7;
}

message ProcessRequest{
	string process_name = 1;
	StringValue arguments = 2;
	int32 count = 3;
	Int32Value volume = 4;
	Int32Value delay = 5;
}

message YoutubeRequest{
	string link = 1;
	Int32Value delay = 2;
}

message ProcessesResponse{
	repeated string process_names = 1;
}

message ShutdownRequest{
	string process_name = 1;
	BoolValue is_all = 2;
	Int32Value delay = 3;
}

message ShutdownWindowsRequest{
	Int32Value delay = 1;
}

message ShutdownResponse{
	int32 count_shutdown_processes = 1;
}